# sensor-data-acquisition

./: .gitignore  README.md  docker-compose-cpu-t-bench-2.yml  docker-compose-cpu-vehicle-001.yml  docker-compose-cpu-vehicle-002.yml  docker-compose-cpu-vehicle-003.yml  docker-compose-cpu-vehicle-004.yml  docker-compose-cpu-vehicle-005.yml  docker-compose-laptop.yml  docker-compose-vpu-a.yml  docker-compose-vpu-b.yml  docker-compose-vpu-c.yml  pyproject.toml
apps/gateway/: Dockerfile.cpu  pyproject.toml
apps/gateway/config/: ap500.json  test_is_dev_connected.json
apps/gateway/src/: main.py
apps/gateway/src/core/: Device.py  DeviceError.py  Devices.py  GatewayServer.py
apps/gateway/src/protos/: gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
apps/gateway/tests/: test_get_sensor_snapshot.py  test_is_dev_connected.py  test_is_dev_healthy.py  test_is_sensor_acquiring.py  test_is_sensor_connected.py  test_is_sensor_healthy.py  test_start_n_stop_sensor_acquisition.py
apps/gateway/tests/unit/: thumbnail_dump.py
apps/service/: Dockerfile.laptop  pyproject.toml
apps/service/config/: laptop.json
apps/service/config/T_BENCH_2/hesai_params/: eth_e_a_extrinsics.yaml  eth_e_b_extrinsics.yaml
apps/service/config/T_BENCH_2/robo_params/: eth_e_i_extrinsics.yaml  eth_e_k_extrinsics.yaml  eth_e_l_extrinsics.yaml
apps/service/config/VEHICLE_001/: cpu.json
apps/service/config/VEHICLE_002/hesai_params/: eth_e_a_extrinsics.yaml  eth_e_c_extrinsics.yaml
apps/service/config/VEHICLE_002/robo_params/: eth_e_j_extrinsics.yaml  eth_e_l_extrinsics.yaml
apps/service/config/VEHICLE_003/: cpu.json
apps/service/config/VEHICLE_003/hesai_params/: eth_e_a_extrinsics.yaml
apps/service/config/VEHICLE_003/robo_params/: eth_e_k_extrinsics.yaml  eth_e_l_extrinsics.yaml
apps/service/config/VEHICLE_004/hesai_params/: eth_e_a_extrinsics.yaml  eth_e_c_extrinsics.yaml  eth_e_d_extrinsics.yaml
apps/service/config/VEHICLE_004/robo_params/: eth_e_j_extrinsics.yaml  eth_e_l_extrinsics.yaml
apps/service/config/VEHICLE_005/: cpu.json
apps/service/config/VEHICLE_005/hesai_params/: eth_e_a_extrinsics.yaml
apps/service/config/VEHICLE_005/robo_params/: eth_e_j_extrinsics.yaml  eth_e_l_extrinsics.yaml
apps/service/src/core/: Acquisitor.py  Drivers.py  ServiceServer.py
apps/service/src/drivers/AP500CAN/: driver.py
apps/service/src/drivers/AT128/: .gitignore  CMakeLists.txt  __init__.py  at128_converter.cpp  driver.py  pcd_conv.py
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/: CMakeLists.txt  README.md  Version.h.in  change notes.md
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/driver/: hesai_lidar_sdk.hpp  hesai_lidar_sdk_gpu.cuh
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/: CMakeLists.txt  driver_param.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/Lidar/: lidar.cc  lidar_types.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/PtcParser/: ptc_parser.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/UdpParser/: udp_parser.cc  udp_parser.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/UdpProtocol/: fault_message.h  udp_protocol_v2_4.h  udp_protocol_v3_1.h  udp_protocol_v3_2.h  udp_protocol_v4_3.h  udp_protocol_v7_2.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/include/: plat_utils.h
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/libhesai/src/: plat_utils.cc
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/test/: test.cu
apps/service/src/drivers/AT128/HesaiLidar_SDK_2.0/tool/: CMakeLists.txt
apps/service/src/drivers/BynavX1/: fake_recv.py  proxy.py
apps/service/src/drivers/NetCamera/: __init__.py  driver.py
apps/service/src/drivers/PseudoLidar/: __init__.py  driver.py  renderer.py
apps/service/src/drivers/RSBP/: CMakeLists.txt  driver.py  pcd_conv.py
apps/service/src/drivers/RSBP/rs_driver-1.5.10/: .gitignore  CMakeLists.txt  README_CN.md
apps/service/src/drivers/RSBP/rs_driver-1.5.10/cmake/: FindPCAP.cmake  cmake_uninstall.cmake.in  rs_driverConfig.cmake.in  rs_driverConfigVersion.cmake.in
apps/service/src/drivers/RSBP/rs_driver-1.5.10/demo/: demo_online.cpp
apps/service/src/drivers/RSBP/rs_driver-1.5.10/doc/howto/: 07_how_to_port_your_app_from_rs_driver_1.3.x_to_1.5.x_CN.md  10_how_to_decode_pcap_file.md  10_how_to_decode_pcap_file_CN.md  11_pcap_file_advanced_topics_CN.md  12_how_to_configure_by_pcap_file_CN.md  15_how_to_transform_pointcloud.md  15_how_to_transform_pointcloud_CN.md  16_how_to_compile_on_windows_CN.md  17_how_to_avoid_packet_loss.md  17_how_to_avoid_packet_loss_CN.md  18_about_point_layout_CN.md  19_about_splitting_frame.md  20_about_usage_of_cpu_and_memory_CN.md  21_how_to_parse_difop.md  21_how_to_parse_difop_CN.md
apps/service/src/drivers/RSBP/rs_driver-1.5.10/doc/intro/: 02_directories_and_files_CN.md  03_thread_model.md  04_parameter_intro.md  05_cmake_macros_intro.md
apps/service/src/drivers/RSBP/rs_driver-1.5.10/doc/src_intro/: rs_driver_intro_CN.md
apps/service/src/drivers/SWM100FHD/: __init__.py  driver.py  gst_pipe.py  gst_pipe_cpu.py  gst_pipe_gpu.py
apps/service/src/drivers/USBCamera/: __init__.py  driver.py
apps/service/src/gen_protos/: __main__.py
apps/service/src/interface/: DriverError.py  IAcquisitable.py  IHealthCheckable.py  IPcdGettable.py  __init__.py
apps/service/src/protos/: service_pb2.py  service_pb2.pyi
apps/service/tests/: test_driver_AT128.py  test_driver_BynavX1.py  test_driver_NetCamera.py  test_driver_PseudoLidar.py  test_driver_RSBP.py  test_driver_SWM100FHD.py  test_driver_Storage.py  test_grpc_AT128.py  test_grpc_BynavX1.py  test_grpc_NetCamera.py  test_grpc_PseudoLidar.py  test_grpc_RSBP.py  test_grpc_SWM100FHD.py  test_grpc_Storage.py
gateway/: pyproject.toml
gateway/config/: test_is_dev_healthy.json  test_sensor_functions.json
gateway/src/core/: ThumbnailLogger.py  __init__.py
gateway/src/gen_protos/: __main__.py
gateway/tests/: test_get_sensor_snapshot.py  test_is_sensor_connected.py  test_start_n_stop_sensor_acquisition.py
gateway/tests/unit/: test_ping.py
(+194 files in other folders)
