[project]
name = "gateway"
version = "0.1.0"
description = "gateway"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.62.1",
    "grpcio-tools==1.62.1",
    "jsons==1.6.3",
    "protobuf==4.25.3",
    "pythonping==1.1.4",
    "setuptools==69.2.0",
    "typish==1.9.3",
    "h5py~=3.11.0",
    "numpy~=1.24.4",
    "python-library",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
python-library = { git = "ssh://git@personal-github/Sinminbeom/python-library.git", tag = "v2.11.1" }

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalContextManager = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/protos"]
