[project]
name = "service"
version = "0.1.0"
description = "service"
requires-python = ">=3.14"
dependencies = [
    "python-library",
]

[project.optional-dependencies]
vpu = [
    "grpcio>=1.70",
    "grpcio-tools>=1.70",
    "jsons==1.6.3",
    "protobuf>=5.27",
    "setuptools>=75.0",
]
cpu = [
    "grpcio>=1.70",
    "grpcio-tools>=1.70",
    "jsons==1.6.3",
    "protobuf>=5.27",
    "setuptools>=75.0",
    "typish==1.9.3",
    "pythonping~=1.1.4",
    "requests~=2.31.0",
    "beautifulsoup4~=4.12.3",
    "scapy~=2.5.0",
    "websocket-client~=1.7.0",
    "pybind11~=2.12.0",
    "PyYAML~=6.0.1",
    "numpy>=2.1",
    "PyOpenGL~=3.1.7",
    "PyOpenGL_accelerate~=3.1.7",
    "xvfbwrapper~=0.2.9",
    "pillow>=11.0",
    "PyGObject>=3.50,<3.52",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
python-library = { git = "ssh://git@personal-github/Sinminbeom/python-library.git", tag = "v2.11.1" }

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalContextManager = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/protos"]
